Include Romain in credits
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/settings.yml
+++ b/settings.yml
@@ -5,3 +5,8 @@ build_command:
   - -dvi-
   - -ps-
   - -pdf
+
+default_img_values:
+  author:
+    all:
+      mlambda: F.-M. Giraud, R. Rincé \& H. Mougard
