--- a/shared/img/barplot-nzmog.yml
+++ b/shared/img/barplot-nzmog.yml
@@ -1,4 +1,4 @@
-author: F.-M. Giraud \& H. Mougard
+author: mlambda
 license: CC-BY-SA-4.0
 title: seaborn.barplot(x = 'OverallQual', y = 'SalePrice', data = ames)
 title_en: Bar plot on AMES data
