--- a/shared/img/xor-nzmog.yml
+++ b/shared/img/xor-nzmog.yml
@@ -1,4 +1,4 @@
-author: F.-M. Giraud \& H. Mougard
+author: mlambda
 license: CC-BY-SA-4.0
 title: Classification de données obtenues grâce à XOR
 title_en: Classification of data obtained with a XOR
