--- a/shared/img/corrmat-nzmog.yml
+++ b/shared/img/corrmat-nzmog.yml
@@ -1,4 +1,4 @@
-author: F.-M. Giraud \& H. Mougard
+author: mlambda
 license: CC-BY-SA-4.0
 title: pandas.Dataframe.corr("Caractéristiques")
 title_en: Correlation matrix on AMES data
