--- a/shared/img/countplot-nzmog.yml
+++ b/shared/img/countplot-nzmog.yml
@@ -1,4 +1,4 @@
-author: F.-M. Giraud \& H. Mougard
+author: mlambda
 license: CC-BY-SA-4.0
 title: seaborn.countplot(df['quality'])
 title_en: Count plot on AMES data
