--- a/shared/img/distplot-nzmog.yml
+++ b/shared/img/distplot-nzmog.yml
@@ -1,4 +1,4 @@
-author: F.-M. Giraud \& H. Mougard
+author: mlambda
 license: CC-BY-SA-4.0
 title: seaborn.distplot("Prix de vente")
 title_en: Dist plot on AMES data
