--- a/shared/img/linear-regression-error-surface.yml
+++ b/shared/img/linear-regression-error-surface.yml
@@ -1,3 +1,3 @@
-author: F.-M. Giraud \& H. Mougard
+author: mlambda
 license: CC-BY-SA-4.0
 title: Surface du critère des moindre carrés pour la régression linéaire
