--- a/shared/img/ml-effort-vs-value-nzmog.yml
+++ b/shared/img/ml-effort-vs-value-nzmog.yml
@@ -1,3 +1,3 @@
-author: F.-M. Giraud \& H. Mougard
+author: mlambda
 license: CC-BY-SA-4.0
 title: Trouver un bon compromis entre plus-value et effort d'investissement en ML
