--- a/shared/img/qqplot-nzmog.yml
+++ b/shared/img/qqplot-nzmog.yml
@@ -1,4 +1,4 @@
-author: F.-M. Giraud \& H. Mougard
+author: mlambda
 license: CC-BY-SA-4.0
 title: scipy.stats.probplot(X, dist='norm', plot=plt)
 title_en: Q-Q plot on AMES data
