Add toc size config and set it small for MLE
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/mle/deck-config.yml
+++ b/orsys/mle/deck-config.yml
@@ -1,2 +1,3 @@
 deck_acronym: MLE
-deck_title: "Machine learning, l'état de l'art"
+deck_title: Machine learning, l'état de l'art
+toc_size: footnotesize
