--- a/shared/latex/engineering/engineering.yml
+++ b/shared/latex/engineering/engineering.yml
@@ -20,6 +20,6 @@ flavors:
     - engineering-practices
     - /questions
   data-sources:
-    - data-sources
+    - data-sources: null
 title: Ingénierie du Machine Learning
 version: 3
