--- a/shared/latex/nn/nn.yml
+++ b/shared/latex/nn/nn.yml
@@ -16,6 +16,12 @@ flavors:
     - $rnn: demo
     - $gan: light
     - /questions
+  deep-discover-demo-light:
+    - intro
+    - playground
+    - $cnn: demo
+    - $rnn: demo
+    - /questions
   deep-intro:
     - intro
     - playground
