Add IAP first draft (=MLE)
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/about/about.yml
+++ b/shared/latex/about/about.yml
@@ -36,6 +36,12 @@ flavors:
     - ressources-eni
     - horaires-5j-eni
     - tour2table
+  sparks-formation-2j:
+    - formateur
+    - description
+    - ressources-eni
+    - horaires-2j-orsys
+    - tour2table
   sparks-formation-3j:
     - formateur
     - description
