Add actors to IAP
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/iap/targets.yml
+++ b/sparks-formation/iap/targets.yml
@@ -35,6 +35,9 @@
     - path: big-questions
       flavor: full
 
+    - path: actors
+      flavor: full
+
     - path: sectors
       flavor: full
 
