--- a/shared/latex/supervised/supervised.yml
+++ b/shared/latex/supervised/supervised.yml
@@ -102,6 +102,19 @@ flavors:
     - random-forest
     - /questions
 
+  iap:
+    - regression-lineaire
+    - cost-error-function
+    - /nn/gradient-descent
+    - /questions
+    - demo-linear-regression
+    - naive-bayes
+    - /questions
+    - trees
+    - trees-details
+    - random-forest
+    - /questions
+
   classification:
     - classification
       
