--- a/orsys/INTRA/2021-12-candriam/targets.yml
+++ b/orsys/INTRA/2021-12-candriam/targets.yml
@@ -8,8 +8,8 @@
   #   - path: tools
   #     flavor: init-python
 
-    - path: ml
-      flavor: full
+    # - path: ml
+    #   flavor: full
     
     - title: null
       path: evaluation-advanced
@@ -18,11 +18,11 @@
 # - name: j2
 #   title: Jour 2 --- Algorithmes 1/2
 #   sections:
-    - path: supervised
-      flavor: standard-nobayes
+    # - path: supervised
+    #   flavor: standard-nobayes
 
-    - path: unsupervised
-      flavor: dimreduce
+    # - path: unsupervised
+    #   flavor: dimreduce
 
 # - name: j3
 #   title: Jour 3 --- Algorithmes 2/2
