Remove duplicate flavor & improve MLE & IAP
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/2021-03-STMICRO/targets.yml
+++ b/orsys/INTRA/2021-03-STMICRO/targets.yml
@@ -40,7 +40,7 @@
   title: Jour 3 --- Langage et traitement de séquences
   sections:
     - path: nlp
-      flavor: intro-nlp
+      flavor: intro
 
     - title: Données séquentielles
       path: sequential-data
