--- a/orsys/INTRA/2021-04-BRGM/targets.yml
+++ b/orsys/INTRA/2021-04-BRGM/targets.yml
@@ -46,7 +46,7 @@
   title: Jour 4 --- Langage et traitement de séquences
   sections:
     - path: nlp
-      flavor: intro-nlp
+      flavor: intro
 
     - title: Données séquentielles
       path: sequential-data
