--- a/shared/latex/nn/rnn/rnn.yml
+++ b/shared/latex/nn/rnn/rnn.yml
@@ -22,6 +22,13 @@ flavors:
     - model
     - /questions
     - demo
+  demo-detailed:
+    - /nlp/wordembeddings
+    - model
+    - lstm
+    - variants
+    - /questions
+    - demo
   demo-detailed-keras-with-word-embeddings:
     - /nlp/wordembeddings
     - model
