move prerequisites as an independant section; add help-pointers.tex to various sections

--- a/orsys/INTRA/2020-09-natixis/latex/ml/ml.yml
+++ b/orsys/INTRA/2020-09-natixis/latex/ml/ml.yml
@@ -14,7 +14,7 @@ default_titles:
 flavors:
   natixis:
     - intro
-    - $prerequisites: full
+    - $/prerequisites: full
     - data-preparation
     - evaluation
     - learning
