--- a/shared/latex/nlp/nlp.yml
+++ b/shared/latex/nlp/nlp.yml
@@ -12,7 +12,32 @@ default_titles:
   help-pointers: Des liens pour y revenir
 
 flavors:
-  full:
+  mle:
+    - ml-nlp
+    - usages-nlp
+    - preprocessing
+    - tf-idf
+    - /questions
+    - help-pointers
+  dpl:
+    - ml-nlp
+    - usages-nlp
+    - preprocessing
+    - tf-idf
+    - wordembeddings
+    - /questions
+    - help-pointers
+  bda:
+    - ml-nlp
+    - usages-nlp
+    - preprocessing
+    - tf-idf
+    - wordembeddings
+    - /questions
+    - tp-text-features-engineering
+    - tp-wordembeddings
+    - help-pointers
+  mmd:
     - ml-nlp
     - usages-nlp
     - $/python/regexes: full
@@ -25,38 +50,6 @@ flavors:
     - /questions
     - tp-text-reco-system
     - wordembeddings
-    - tp-wordembeddings
-    - help-pointers
-  intro:
-    - ml-nlp
-    - usages-nlp
-    - preprocessing
-    - tf-idf
-    - wordembeddings
-    - /questions
-    - help-pointers
-  intro-no-we:
-    - ml-nlp
-    - usages-nlp
-    - preprocessing
-    - tf-idf
-    - /questions
-    - help-pointers
-  intro-nn:
-    - ml-nlp
-    - tf-idf
-    - wordembeddings
-    - usages-nlp
-    - /questions
-    - help-pointers
-  intro-tp:
-    - ml-nlp
-    - usages-nlp
-    - preprocessing
-    - tf-idf
-    - wordembeddings
-    - /questions
-    - tp-text-features-engineering
     - tp-wordembeddings
     - help-pointers
 title: Traitement automatique des langues
