--- a/shared/latex/sequential-data/sequential-data.yml
+++ b/shared/latex/sequential-data/sequential-data.yml
@@ -18,7 +18,7 @@ flavors:
     - hmm
     - statistical-approaches
     - /questions
-  intro:
+  dpl:
     - sequential-data
     - sequential-models
     - /questions
