--- a/orsys/INTRA/2021-04-BRGM/targets.yml
+++ b/orsys/INTRA/2021-04-BRGM/targets.yml
@@ -14,9 +14,8 @@
 - name: j2
   title: Jour 2 --- TensorFlow pour le Deep Learning
   sections:
-    - path : supervised
+    - path : supervised/classification
       title: Classification
-      flavor: classification
 
     - title: Réseaux de neurones
       path: nn
@@ -46,11 +45,11 @@
   title: Jour 4 --- Langage et traitement de séquences
   sections:
     - path: nlp
-      flavor: intro
+      flavor: dpl
 
     - title: Données séquentielles
       path: sequential-data
-      flavor: intro
+      flavor: dpl
 
     - title: Réseaux de neurones récurrents
       path: nn/rnn
