--- a/orsys/INTRA/2021-12-candriam/targets.yml
+++ b/orsys/INTRA/2021-12-candriam/targets.yml
@@ -6,17 +6,17 @@
       flavor: orsys-3j
 
     - path: ml
-      flavor: detailed-no-tp
+      flavor: drn
 
 
 - name: j2
   title: Jour 2 --- Algorithmes 1/2
   sections:
     - path: supervised
-      flavor: standard-nobayes
+      flavor: mlb
 
     - path: unsupervised
-      flavor: dimreduce
+      flavor: mlb
 
 - name: j3
   title: Jour 3 --- Algorithmes 2/2
