--- a/orsys/mle/targets.yml
+++ b/orsys/mle/targets.yml
@@ -12,13 +12,13 @@
       flavor: data-sources
 
     - path: ml
-      flavor: detailed-no-tp-no-prereq
+      flavor: mle
 
     - path: supervised
       flavor: drn
 
     - path: unsupervised
-      flavor: dimreduce-clustering
+      flavor: mle
 
     - path: nn
       flavor: deep-discover-demo-light
@@ -27,7 +27,7 @@
   title: Jour 2
   sections:
     - path: nlp
-      flavor: intro-no-we
+      flavor: mle
       
     - path: rl
       flavor: light
