--- a/orsys/bda/targets.yml
+++ b/orsys/bda/targets.yml
@@ -8,30 +8,30 @@
       flavor: full
 
 - name: j2
-  title: Jour 2 --- Apprentissage supervisé
+  title: Jour 2 --- Apprentissage non-supervisé
   sections:
     - path: ml
       flavor: bda
 
-    - path: supervised
-      flavor: regressions-and-naive-bayes
+    - path: unsupervised
+      flavor: bda
 
 - name: j3
-  title: Jour 3 --- Apprentissage non-supervisé
+  title: Jour 3 --- Apprentissage supervisé
   sections:
-    - path: unsupervised
-      flavor: full-trees
+
+    - path: supervised
+      flavor: bda
 
 - name: j4
   title: Jour 4 --- Traitement du langage naturel
   sections:
     - path: nlp
-      flavor: intro-tp
+      flavor: bda
 
-    - title: Apprentissage supervisé
-      path: supervised
-      flavor: text-svm
-
+    - path: supervised
+      flavor: svm-text
+    
     - path: nn
       flavor: deep-intro
 
