fix section flavors : supervised, sequential-data, prerequisites; add new section bayesian

--- a/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
+++ b/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
@@ -20,8 +20,8 @@
 - name: j3
   title: Jour 3 --- Méthodes Bayésiennes, Réseaux de neurones
   sections:
-    - path: supervised
-      flavor: bayes
+    - path: bayesian
+      flavor: mlb
 
     - title: Réseaux de Neurones
       path: nn
