--- a/orsys/INTRA/2020-09-natixis/targets.yml
+++ b/orsys/INTRA/2020-09-natixis/targets.yml
@@ -27,7 +27,7 @@
   title: Jour 4 --- Réseaux de neurones \& séries temporelles
   sections:
     - path: sequential-data
-      flavor: full-with-stats
+      flavor: full
 
     - path: nn
       flavor: full
