--- a/orsys/INTRA/2021-12-candriam/targets.yml
+++ b/orsys/INTRA/2021-12-candriam/targets.yml
@@ -21,8 +21,8 @@
 - name: j3
   title: Jour 3 --- Algorithmes 2/2
   sections:
-    - path: supervised
-      flavor: bayes
+    - path: bayesian
+      flavor: mlb
 
     - path: nn
       flavor: deep-intro
