--- a/shared/latex/prerequisites/prerequisites.yml
+++ b/shared/latex/prerequisites/prerequisites.yml
@@ -4,6 +4,7 @@ default_titles:
   goals: Quelques prérequis
   linear-algebra: Algèbre linéaire
   probabilities: Probabilités
+  proba-rappel: Probabilités
   statistics: Statistique
   help-pointers: Des liens pour y revenir
 flavors:
@@ -12,6 +13,7 @@ flavors:
     - linear-algebra
     - calculus
     - probabilities
+    - proba-rappel
     - statistics
     - conclusion
     - /questions
