--- a/shared/latex/sequential-data/sequential-data.yml
+++ b/shared/latex/sequential-data/sequential-data.yml
@@ -1,22 +1,18 @@
 default_titles:
-  hmm: Modèles de Markov cachés
-  markov-model: Modèles de Markov
   sequential-data: Introduction
   sequential-models: Modèles Séquentiels
   statistical-approaches: Approches statistiques
+  sequence-handling: Approches
+  tp-tf: TP séquence temporelles
 flavors:
   full:
     - sequential-data
     - sequential-models
-    - markov-model
-    - hmm
-    - /questions
-  full-with-stats:
-    - sequential-data
-    - sequential-models
-    - markov-model
-    - hmm
     - statistical-approaches
+    - /bayesian/markov-model
+    - /bayesian/hmm
+    - sequence-handling
+    - tp-tf
     - /questions
   dpl:
     - sequential-data
